org_unpackaged/standard/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>fs_associateType__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Associate Service</label>
        <picklist>
            <picklistValues>
                <fullName>MBO Exec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Sub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Associate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_birthdate__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fs_contactPref__c</fullName>
        <label>Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_contactUsername__c</fullName>
        <label>Contact Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_direct__c</fullName>
        <label>Associate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp-Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec-Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Only Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready-To-Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff-Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time and Expense Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_emPhone__c</fullName>
        <formula>Enrollment_Manager__r.fs_phone__c</formula>
        <label>EM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_facebook__c</fullName>
        <label>Facebook</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_fullName__c</fullName>
        <formula>FirstName + &quot; &quot; + LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_gender__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_industryExpertiseWMID__c</fullName>
        <label>Industry Expertise WMID</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1036</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1044</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1051</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1053</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1055</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1056</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1057</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1058</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1059</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1062</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fs_industryExpertise__c</fullName>
        <label>Industry Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Place holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural and Design Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcasting, Music, &amp; Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Packaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government &amp; Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality &amp; Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fs_leadNumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>fs_linkedin__c</fullName>
        <label>LinkedIn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_marital__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_mboRecordIdContact__c</fullName>
        <label>MBO Record ID Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_opPlan__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Operation Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Account Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Debit Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Staff - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Staff - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Billing Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Fee Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_overview__c</fullName>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fs_owner__c</fullName>
        <formula>IF(
   OR(
      ISBLANK(Enrollment_Manager__r.Salesforce_User__c),
      ISBLANK(Enrollment_Manager__c)
   ),
   &quot;00580000003Xfjx&quot;,
   Enrollment_Manager__r.Salesforce_User__c
)</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_pPhoneType__c</fullName>
        <label>Primary Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_referrerOwner__c</fullName>
        <label>Referrer Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_region__c</fullName>
        <inlineHelpText>Updated by the MBO System</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>DC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Serve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_sPhoneType__c</fullName>
        <description>This is the field to select the type of phone number</description>
        <inlineHelpText>Please select the phone type</inlineHelpText>
        <label>Secondary Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_salesStatusReason__c</fullName>
        <label>Sales Status Reason</label>
        <picklist>
            <controllingField>Sub_Status__c</controllingField>
            <picklistValues>
                <fullName>Low Annual Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupation Not Supported (WC/E&amp;O/B2C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Self-Employable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa/Int&apos;l Tax Withholding Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Seeking Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped Responding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislikes Benefit Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Vetting Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wants 1099 Status/Brand/Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took W-2 Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBO/Client Didn&apos;t Agree To Project Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taking Time Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Looking For Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Canceled Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>fs_skills__c</fullName>
        <label>Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fs_statusReason__c</fullName>
        <inlineHelpText>Updated from the MBO System</inlineHelpText>
        <label>Associate Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending (old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fs_twitter__c</fullName>
        <label>Twitter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>origDate__c</fullName>
        <formula>IF(
   DATEVALUE(CreatedDate)&gt; fd_mboCreate__c,
   fd_mboCreate__c,
   DATEVALUE(CreatedDate)
)</formula>
        <label>Original Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pardot_Qualifier_Grade__c</fullName>
        <label>pardot Qualifier Grade</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rs_BM__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Manager</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Inquiries</relationshipLabel>
        <relationshipName>Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_opsAdmin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Admin</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Leads OA</relationshipLabel>
        <relationshipName>Lead_OA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_qualAdvisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification Advisor</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Qualifying Leads</relationshipLabel>
        <relationshipName>Qualifing_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rs_referringAffiliate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referring Affiliate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a contact that has their type set to affiliate</errorMessage>
            <filterItems>
                <field>Contact.Accounttype__c</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred Associates (Lead)</relationshipLabel>
        <relationshipName>Affiliate1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slaQualDoc__c</fullName>
        <label>Received Qualification Documents</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>slaQualIns__c</fullName>
        <label>Received Insurance Certificate/Waivers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>slaVASTCall__c</fullName>
        <label>Completed Consultation Call</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllProspectiveAssociates</fullName>
        <columns>FULL_NAME</columns>
        <columns>AssociateNumber__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Associate_Status__c</columns>
        <columns>Referring_Client__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CRA,Lead.Direct_Associate</value>
        </filters>
        <label>All Associates - Prospective</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllProspectiveCompanies</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Client</value>
        </filters>
        <label>All Clients - Prospective</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllProspectiveCompliance</fullName>
        <columns>FULL_NAME</columns>
        <columns>AssociateNumber__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Referring_Client__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012C0000000QFCZ</value>
        </filters>
        <label>All Compliance - Prospective</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Client_Inquiry_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Inquiry</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Client</value>
        </filters>
        <label>All Client Inquiry Leads</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Direct_Inquiry_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>How_Heard__c</columns>
        <columns>How_Heard_AD__c</columns>
        <columns>Referring_Contact__c</columns>
        <columns>Sub_Status__c</columns>
        <columns>Persona__c</columns>
        <columns>Sub_Persona__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Inquiry</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Direct_Associate</value>
        </filters>
        <label>All Direct Inquiry Leads</label>
        <sharedTo/>
    </listViews>
</CustomObject>